<resources>
    <string name="app_name">BiTGApps</string>
    <string name="app_package">com.paget96.bitgapps</string>

    <string name="telegram">Telegram</string>
    <string name="join_global_discussion_of_bitgapps">Join global discussion of BiTGApps, help us with the improvements, bug fixes and give your suggestions</string>
    <string name="forum">Forum</string>
    <string name="official_forum_discussion">Check out BiTGApps official forum discussion</string>
    <string name="github">GitHub</string>
    <string name="official_github">Official GitHub repository</string>
</resources>
